Post page desing

--- a/angular-blog/src/app/post-page/post-page.component.html
+++ b/angular-blog/src/app/post-page/post-page.component.html
@@ -1,1 +1,21 @@
-<p>post-page works!</p>
+<div class="post">
+    <div class="header">
+        <h1>Post title</h1>
+
+        <button routerLink="/" class="btn btn-link">Home page</button>
+    </div>
+    <div class="info">
+        <strong>Author</strong>
+        <small>17.01.2022</small>
+    </div>
+
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore quo perferendis animi temporibus dignissimos. Eum quasi recusandae velit assumenda, impedit, beatae vel iusto voluptatem minus asperiores praesentium voluptatibus provident deserunt temporibus delectus, et aspernatur voluptas soluta labore! Eaque, doloremque laboriosam suscipit minima illum atque aliquam iure sequi nesciunt esse nihil.</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore quo perferendis animi temporibus dignissimos. Eum quasi recusandae velit assumenda, impedit, beatae vel iusto voluptatem minus asperiores praesentium voluptatibus provident deserunt temporibus delectus, et aspernatur voluptas soluta labore! Eaque, doloremque laboriosam suscipit minima illum atque aliquam iure sequi nesciunt esse nihil.</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore quo perferendis animi temporibus dignissimos. Eum quasi recusandae velit assumenda, impedit, beatae vel iusto voluptatem minus asperiores praesentium voluptatibus provident deserunt temporibus delectus, et aspernatur voluptas soluta labore! Eaque, doloremque laboriosam suscipit minima illum atque aliquam iure sequi nesciunt esse nihil.</p>
+        
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore quo perferendis animi temporibus dignissimos. Eum quasi recusandae velit assumenda, impedit, beatae vel iusto voluptatem minus asperiores praesentium voluptatibus provident deserunt temporibus delectus, et aspernatur voluptas soluta labore! Eaque, doloremque laboriosam suscipit minima illum atque aliquam iure sequi nesciunt esse nihil.</p>
+    </div>
+</div>
