--- a/angular-blog/src/app/admin/shared/components/admin-layout/admin-layout.component.html
+++ b/angular-blog/src/app/admin/shared/components/admin-layout/admin-layout.component.html
@@ -1,2 +1,20 @@
-<h1>Admin layout</h1>
-<router-outlet></router-outlet>
+<nav class="navbar bg-primary">
+    <h1>
+        <a routerLink="/">Angular Admin</a>
+    </h1>
+        <ul>
+            <li>
+                <a [routerLink]="['/admin', 'dashboard']">Home</a>
+            </li>
+            <li>
+                <a [routerLink]="['/admin', 'create']">Creae</a>
+            </li>
+            <li>
+                <a href="#" (click)="logout($event)">Logout</a>
+            </li>
+        </ul>
+</nav>
+
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
