--- a/angular-blog/src/app/admin/shared/components/admin-layout/admin-layout.component.html
+++ b/angular-blog/src/app/admin/shared/components/admin-layout/admin-layout.component.html
@@ -1,20 +1,21 @@
 <nav class="navbar bg-primary">
-    <h1>
-        <a routerLink="/">Angular Admin</a>
-    </h1>
-        <ul>
-            <li>
-                <a [routerLink]="['/admin', 'dashboard']">Home</a>
-            </li>
-            <li>
-                <a [routerLink]="['/admin', 'create']">Creae</a>
-            </li>
-            <li>
-                <a href="#" (click)="logout($event)">Logout</a>
-            </li>
-        </ul>
+  <h1>
+    <a routerLink="/">Angular Admin</a>
+  </h1>
+
+  <ul>
+    <li routerLinkActive="active">
+      <a [routerLink]="['/admin', 'dashboard']">Home</a>
+    </li>
+    <li routerLinkActive="active">
+      <a [routerLink]="['/admin', 'create']">Creae</a>
+    </li>
+    <li>
+      <a href="#" (click)="logout($event)">Logout</a>
+    </li>
+  </ul>
 </nav>
 
 <div class="container">
-    <router-outlet></router-outlet>
+  <router-outlet></router-outlet>
 </div>
