add token from firebase

--- a/angular-blog/src/app/post-page/post-page.component.html
+++ b/angular-blog/src/app/post-page/post-page.component.html
@@ -1,21 +1,19 @@
 <div class="post">
-    <div class="header">
-        <h1>Post title</h1>
+  <div class="header">
+    <h1>Post title</h1>
 
-        <button routerLink="/" class="btn btn-link">Home page</button>
-    </div>
-    <div class="info">
-        <strong>Author</strong>
-        <small>17.01.2022</small>
-    </div>
+    <button routerLink="/" class="btn btn-link">На главную</button>
+  </div>
 
-    <div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore quo perferendis animi temporibus dignissimos. Eum quasi recusandae velit assumenda, impedit, beatae vel iusto voluptatem minus asperiores praesentium voluptatibus provident deserunt temporibus delectus, et aspernatur voluptas soluta labore! Eaque, doloremque laboriosam suscipit minima illum atque aliquam iure sequi nesciunt esse nihil.</p>
+  <div class="info">
+    <strong>Тут автор</strong>
+    <small>12.09.2019</small>
+  </div>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore quo perferendis animi temporibus dignissimos. Eum quasi recusandae velit assumenda, impedit, beatae vel iusto voluptatem minus asperiores praesentium voluptatibus provident deserunt temporibus delectus, et aspernatur voluptas soluta labore! Eaque, doloremque laboriosam suscipit minima illum atque aliquam iure sequi nesciunt esse nihil.</p>
-
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore quo perferendis animi temporibus dignissimos. Eum quasi recusandae velit assumenda, impedit, beatae vel iusto voluptatem minus asperiores praesentium voluptatibus provident deserunt temporibus delectus, et aspernatur voluptas soluta labore! Eaque, doloremque laboriosam suscipit minima illum atque aliquam iure sequi nesciunt esse nihil.</p>
-        
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore quo perferendis animi temporibus dignissimos. Eum quasi recusandae velit assumenda, impedit, beatae vel iusto voluptatem minus asperiores praesentium voluptatibus provident deserunt temporibus delectus, et aspernatur voluptas soluta labore! Eaque, doloremque laboriosam suscipit minima illum atque aliquam iure sequi nesciunt esse nihil.</p>
-    </div>
+  <div>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A consequuntur cupiditate delectus, illo nam numquam sequi sit voluptas? Animi dicta eius eos exercitationem hic minima mollitia obcaecati possimus quaerat qui quidem, rerum ut voluptatem? Asperiores blanditiis est ipsam, iste perferendis porro soluta. Architecto esse eum excepturi fuga id neque ullam.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A consequuntur cupiditate delectus, illo nam numquam sequi sit voluptas? Animi dicta eius eos exercitationem hic minima mollitia obcaecati possimus quaerat qui quidem, rerum ut voluptatem? Asperiores blanditiis est ipsam, iste perferendis porro soluta. Architecto esse eum excepturi fuga id neque ullam.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A consequuntur cupiditate delectus, illo nam numquam sequi sit voluptas? Animi dicta eius eos exercitationem hic minima mollitia obcaecati possimus quaerat qui quidem, rerum ut voluptatem? Asperiores blanditiis est ipsam, iste perferendis porro soluta. Architecto esse eum excepturi fuga id neque ullam.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A consequuntur cupiditate delectus, illo nam numquam sequi sit voluptas? Animi dicta eius eos exercitationem hic minima mollitia obcaecati possimus quaerat qui quidem, rerum ut voluptatem? Asperiores blanditiis est ipsam, iste perferendis porro soluta. Architecto esse eum excepturi fuga id neque ullam.</p>
+  </div>
 </div>
