--- a/angular-blog/src/app/admin/login-page/login-page.component.html
+++ b/angular-blog/src/app/admin/login-page/login-page.component.html
@@ -1,5 +1,10 @@
 <form class="card" [formGroup]="form" (ngSubmit)="submit()">
-  <h2>Enter in Admin</h2>
+  <h2>Войти в панель администратора</h2>
+
+
+  <div class="alert alert-danger" *ngIf="auth.error$ | async as error">
+    {{ error }}
+  </div>
 
   <div
     class="form-control"
@@ -12,9 +17,10 @@
       class="validation"
     >
       <small *ngIf="form.get('email').errors.required">
-        Enter email      </small>
+        Введите поле email
+      </small>
       <small *ngIf="form.get('email').errors.email">
-        Email!
+        Поле email должно быть email
       </small>
     </div>
   </div>
@@ -23,20 +29,21 @@
     class="form-control"
     [ngClass]="{invalid: form.get('password').touched && form.get('password').invalid}"
   >
-    <label for="password">Password:</label>
+    <label for="password">Пароль:</label>
     <input id="password" type="password" formControlName="password">
     <div
       class="validation"
       *ngIf="form.get('password').touched && form.get('password').invalid"
     >
       <small *ngIf="form.get('password').errors.required">
-        Enter Password
+        Введите пароль
       </small>
       <small *ngIf="form.get('password').errors.minlength">
-        Password muss >
+        Пароль должен быть не менее
         {{form.get('password').errors.minlength.requiredLength}}
-        . Now it is 
+        символов. Сейчас он
         {{form.get('password').errors.minlength.actualLength}}
+        символа.
       </small>
     </div>
   </div>
@@ -45,5 +52,5 @@
     type="submit"
     class="btn btn-primary"
     [disabled]="form.invalid || submitted"
-  >LogIn</button>
+  >Войти</button>
 </form>
