--- a/angular-blog/src/app/admin/login-page/login-page.component.html
+++ b/angular-blog/src/app/admin/login-page/login-page.component.html
@@ -1,9 +1,13 @@
 <form class="card" [formGroup]="form" (ngSubmit)="submit()">
-  <h2>Войти в панель администратора</h2>
+  <h2>Enter in Admin panel</h2>
 
 
   <div class="alert alert-danger" *ngIf="auth.error$ | async as error">
     {{ error }}
+  </div>
+
+  <div class="alert alert-info" *ngIf="message">
+    {{ message }}
   </div>
 
   <div
@@ -17,10 +21,10 @@
       class="validation"
     >
       <small *ngIf="form.get('email').errors.required">
-        Введите поле email
+        Enter email
       </small>
       <small *ngIf="form.get('email').errors.email">
-        Поле email должно быть email
+        Muss email
       </small>
     </div>
   </div>
@@ -29,21 +33,21 @@
     class="form-control"
     [ngClass]="{invalid: form.get('password').touched && form.get('password').invalid}"
   >
-    <label for="password">Пароль:</label>
+    <label for="password">Password:</label>
     <input id="password" type="password" formControlName="password">
     <div
       class="validation"
       *ngIf="form.get('password').touched && form.get('password').invalid"
     >
       <small *ngIf="form.get('password').errors.required">
-        Введите пароль
+        Enter password
       </small>
       <small *ngIf="form.get('password').errors.minlength">
-        Пароль должен быть не менее
+        Pasword >
         {{form.get('password').errors.minlength.requiredLength}}
-        символов. Сейчас он
+        . Now is
         {{form.get('password').errors.minlength.actualLength}}
-        символа.
+        .
       </small>
     </div>
   </div>
@@ -52,5 +56,5 @@
     type="submit"
     class="btn btn-primary"
     [disabled]="form.invalid || submitted"
-  >Войти</button>
+  >Logoin</button>
 </form>
