add redactor plugin

--- a/angular-blog/src/app/admin/login-page/login-page.component.html
+++ b/angular-blog/src/app/admin/login-page/login-page.component.html
@@ -1,5 +1,5 @@
 <form class="card" [formGroup]="form" (ngSubmit)="submit()">
-  <h2>Enter in Admin panel</h2>
+  <h2>Войти в панель администратора</h2>
 
 
   <div class="alert alert-danger" *ngIf="auth.error$ | async as error">
@@ -21,10 +21,10 @@
       class="validation"
     >
       <small *ngIf="form.get('email').errors.required">
-        Enter email
+        Введите поле email
       </small>
       <small *ngIf="form.get('email').errors.email">
-        Muss email
+        Поле email должно быть email
       </small>
     </div>
   </div>
@@ -33,21 +33,21 @@
     class="form-control"
     [ngClass]="{invalid: form.get('password').touched && form.get('password').invalid}"
   >
-    <label for="password">Password:</label>
+    <label for="password">Пароль:</label>
     <input id="password" type="password" formControlName="password">
     <div
       class="validation"
       *ngIf="form.get('password').touched && form.get('password').invalid"
     >
       <small *ngIf="form.get('password').errors.required">
-        Enter password
+        Введите пароль
       </small>
       <small *ngIf="form.get('password').errors.minlength">
-        Pasword >
+        Пароль должен быть не менее
         {{form.get('password').errors.minlength.requiredLength}}
-        . Now is
+        символов. Сейчас он
         {{form.get('password').errors.minlength.actualLength}}
-        .
+        символа.
       </small>
     </div>
   </div>
@@ -56,5 +56,5 @@
     type="submit"
     class="btn btn-primary"
     [disabled]="form.invalid || submitted"
-  >Logoin</button>
+  >Войти</button>
 </form>
