--- a/angular-blog/src/app/admin/create-page/create-page.component.html
+++ b/angular-blog/src/app/admin/create-page/create-page.component.html
@@ -1,39 +1,39 @@
 <form [formGroup]="form" (ngSubmit)="submit()">
-  <h1>Creste new Post</h1>
+  <h1>Создание нового поста</h1>
 
   <div
     class="form-control"
     [ngClass]="{invalid: form.get('title').touched && form.get('title').invalid}"
   >
-    <label for="title">Post title:</label>
+    <label for="title">Название поста:</label>
     <input id="title" type="text" formControlName="title">
     <div
       *ngIf="form.get('title').touched && form.get('title').invalid"
       class="validation"
     >
       <small *ngIf="form.get('title').errors.required">
-        Enter Title
+        Введите название поста
       </small>
     </div>
   </div>
 
   <div class="form-control">
-    <label>Text:</label>
-
+    <label>Контент поста:</label>
+    <quill-editor formControlName="text"></quill-editor>
   </div>
 
   <div
     class="form-control"
     [ngClass]="{invalid: form.get('author').touched && form.get('author').invalid}"
   >
-    <label for="author">Author:</label>
+    <label for="author">Автор поста:</label>
     <input id="author" type="text" formControlName="author">
     <div
       *ngIf="form.get('author').touched && form.get('author').invalid"
       class="validation"
     >
       <small *ngIf="form.get('author').errors.required">
-        Enter Author
+        Введите автора поста
       </small>
     </div>
   </div>
@@ -42,5 +42,5 @@
     type="submit"
     class="btn btn-block btn-dark"
     [disabled]="form.invalid"
-  >Creste Post</button>
+  >Создать пост</button>
 </form>
