--- a/angular-blog/src/app/admin/shared/components/admin-layout/admin-layout.component.html
+++ b/angular-blog/src/app/admin/shared/components/admin-layout/admin-layout.component.html
@@ -5,13 +5,13 @@
 
   <ul *ngIf="auth.isAuthenticated()">
     <li routerLinkActive="active">
-      <a [routerLink]="['/admin', 'dashboard']">Home</a>
+      <a [routerLink]="['/admin', 'dashboard']">Главная</a>
     </li>
     <li routerLinkActive="active">
-      <a [routerLink]="['/admin', 'create']">Creae</a>
+      <a [routerLink]="['/admin', 'create']">Создать</a>
     </li>
     <li>
-      <a href="#" (click)="logout($event)">Logout</a>
+      <a href="#" (click)="logout($event)">Выйти</a>
     </li>
   </ul>
 </nav>
