--- a/angular-blog/src/app/post-page/post-page.component.scss
+++ b/angular-blog/src/app/post-page/post-page.component.scss
@@ -1,18 +1,19 @@
 .post {
 
-    .header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 
-    h1 {
-        margin-bottom: 0.5rem;
-    }
+  h1 {
+    margin-bottom: .5rem;
+  }
 
-    .info {
-        strong {
-            margin-right: 1rem;
-        }
+  .info {
+    strong {
+      margin-right: 1rem;
     }
+  }
+
 }
