--- a/angular-blog/src/app/shared/components/post/post.component.html
+++ b/angular-blog/src/app/shared/components/post/post.component.html
@@ -2,15 +2,15 @@
   <div class="card-header">
     <h2>Post title</h2>
 
-    <small>17.01.2022</small>
+    <small>12.09.2019</small>
   </div>
 
   <div>
-    <small>Johnny</small>
+    <small>Vladilen</small>
   </div>
 
   <button
-    [routerLink]="['/post', 123]"
+    [routerLink]="['/post', 12312]"
     class="btn btn-dark"
-  >Open</button>
+  >Открыть</button>
 </div>
